# SekaiText-Next

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  RELEASE_SIGNING.md  build-release-local.cmd  build-release-local.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  release.cmd  release.sh  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release-manifest.yml  release.yml
backend/: .gitignore  go.mod  go.sum
public/: areaDict.json  characterDict.json  unitDict.json
scripts/: _checkmsg_patch.txt  build-engine.mjs  build-go.mjs  check-release-mutable.mjs  cleanup.mjs  plugin-market-lib.mjs  plugin-market-lib.test.mjs  publish-release-cdn.mjs  release-manifest-lib.mjs  release-manifest-lib.test.mjs  release-workflow.test.mjs  sync-version.mjs  sync-version.test.mjs  verify-plugin-market.mjs
scripts/fixtures/: app-release-signature-v1.json
src/: App.vue  env.d.ts  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  engine.entitlements  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/api/: client.test.ts  client.ts
src/components/: DebugPanel.vue  DownloadFloat.vue  RecoveryDialog.vue  Toast.vue
src/composables/: useAutoSave.test.ts  useAutoSave.ts  useConfirm.ts  useDebugLog.ts  useDownloadFloat.ts  useFileDialog.ts  useFlashbackTooltip.ts  useGlossaryMatcher.test.ts  useGlossaryMatcher.ts  useGlossaryTooltip.ts  useScrollSync.ts  useToast.ts  useUndo.test.ts  useUndo.ts
src/constants/: shortcuts.ts
src/data/: characterColors.ts
src/editor/: documentMutation.test.ts  documentMutation.ts  recovery.test.ts  recovery.ts  recoveryCoordinator.test.ts  recoveryCoordinator.ts  saveCoordinator.test.ts  saveCoordinator.ts  saveDirectoryCoordinator.ts
src/lib/: idb.ts
src/onboarding/: TourOverlay.vue  tours.ts  useTour.ts
src/pages/: AccountPage.vue  DebugPage.vue  EditorPage.vue  (+6 more)
website/: deploy-oss.mjs  download.md  index.md  package-lock.json  package.json  plugins.md  tsconfig.json  verify-build.mjs
(+168 files in other folders)
