[package]
name = "sekaitext"
version = "5.9.2"
description = "Project Sekai story translation and subtitle editing desktop application"
authors = ["SnowGlow-aww"]
license = "MIT"
repository = "https://github.com/SnowGlow-aww/SekaiText-Next"
homepage = "https://sakimizuki.accr.cc/web/index.html"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sekaitext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Second-launch focuses the existing window instead of spawning a competing
# backend (desktop-only). Usage is further gated to release in lib.rs.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"
